test/loop/confidence/errors/missing_method_error.loop
# Missing method

require java.lang.System

main ->
  System::pRINT()
